# spotify-fetch

./: .gitignore  README.md  colors.py  main.py  pyproject.toml  setup.py
src/: colors.py  helpers.py  main.py
src/sfetch/: helpers.py  main.py
